Add infrastructure for packaging Cypher-Shell as native binary. ()
**Improve no-arch build.**

This changes the "no-arch" build in one significant way and a couple of minor improvements:
- stop shading everything: This will be unnessary as soon as there are native, single-file-binaries for each major OS, and thus we won't have to deal with odditities due to shading. Shading will especially cause native issues (and in a future outlook, issues with jlink aka the module path
- the structure of the no-arch deployment is way more standardized (bin and lib folders, see also https://jreleaser.org/guide/latest/distributions/java-binary.html)
- the manually created sh and bat files can go away.
- the debian and rpm packages have been adapted accordingly.

**Add native packaging profile.**

Includes substitutions for the Neo4j Heap Estimator and basically disables it via SubstrateVM (SVM) substitutions when running in native image.

Can be activated via property `native`.

```
mvn -Dnative clean package -pl :cypher-shell
```

Skip binary compression with

```
mvn -Dnative -DskipCompress clean package -pl :cypher-shell
```

**Create native installation packages.**

- Add create_native_image.java for generating the native image independent from Graal container
- Add makefile targets for debian native and necessary helper
- Add makefile targets for rpm native and necessary helper

**Adapt product packaging to changes in cypher-shell packaging**

- Unzip the new format, strip of the top most folder to recreate the cypher-shell dir
- Only include the generated shell / cmd scripts
- Make the standalone builds depend on cypher shell, so that the dependencies are in the dependency set
- Fix scope of the driver so that it is included in the dependencySet.

Note: The Native image Maven plugin is licensed under UPL https://oss.oracle.com/licenses/upl/ which is "broadly agreed to be GPLv2, GPLv2+Classpath Exception, CDDL, and commercial license compat